--- a/estoque.html
+++ b/estoque.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Página de Estoque </h1>
+    <p>Estoque = R$ 10000,00</p>
     <a href="index.html">Voltar para a página inicial</a>
 </body>
 </html>
